Add a greeting header for Sthefanny

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <body>
 
 <h1>Treino de Matemática</h1>
+<h2>Te amooooooo, Sthefanny</h2>
 
 <div class="modos">
     <label><input type="radio" name="modo" value="tabuadaSeq" checked> Tabuada Sequencial</label><br>
